tests/derive_ui/default_value_t_invalid.stderr
error[E0600]: cannot apply unary operator `-` to type `u32`
  --> $DIR/default_value_t_invalid.rs:14:44
   |
14 |     #[clap(value_parser, default_value_t = -10)]
   |                                            ^^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated
